# safecadence-network-risk

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_DEMO_v15.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  PRICING_POLICY.md  PRIVACY.md  README.md  RELEASE-NOTES-v10.0.1.md  ROADMAP.md  ROADMAP_v12_to_v14.md  SECURITY.md  SUPPORT_POLICY.md  TODO_MORNING.md  action.yml  auto-publish-v2.10.0.sh  auto-publish-v2.3.0.sh  auto-publish-v2.6.0.sh  auto-publish-v2.7.0.sh  auto-publish-v2.8.0.sh  auto-publish-v2.9.0.sh  auto-publish-v3.0.0.sh  auto-publish-v3.1.0.sh  auto-publish-v4.0.0.sh  auto-publish-v5.0.0.sh  auto-publish-v5.1.0.sh  auto-publish-v6.0.0.sh  auto-publish-v6.1.0.sh  auto-publish-v6.2.0.sh  auto-publish-v6.2.1.sh  auto-publish-v6.3.0.sh  auto-publish-v6.4.0.sh  auto-publish-v6.4.1.sh  auto-publish-v6.4.2.sh  auto-publish-v6.4.3.sh  auto-publish-v6.5.0.sh  (+19 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  example-audit.yml  publish-to-pypi.yml
chrome-extension/: README.md  background.js  manifest.json  popup.html  popup.js
deploy/: load-balancer.md  postgres-replication-setup.sh
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  DEPLOY.md  DEPLOYMENT.md  FIRST_CUSTOMER_ONBOARDING.md  HA_DEPLOYMENT.md  HOWTO.md  IDENTITY-INTEGRATION.md  IDENTITY-V7.5-SPEC.md  LOCAL-LLM.md  PLATFORM_ARCHITECTURE.md  POLICY-TARGETING.md  ROADMAP.md  ROADMAP_v16.md  ROADMAP_v17.md  RULE_GUIDE.md  TEST-PLAN.md  THREAT_MODEL.md  UI-V9-DESIGN.md  WHITE_LABEL.md  v9-mockup.html  v9.33-write-back-audit.md  v9.35-execute-audit.md  v9.36-discover-audit.md  v9.37-compliance-audit.md  v9.38-small-pages-audit.md
docs/examples/: network-audit.yml  safecadence-activity-prune.service  safecadence-activity-prune.timer  safecadence-activity.logrotate
docs/migrations/: from-falcon-spotlight.md  from-qualys.md  from-rapid7.md  from-tenable.md
docs/runbooks/: disaster-recovery.md
examples/sample_configs/: arista_eos_running.txt  aruba_cx_running.txt  aws_account.json  azure_subscription.json  cisco_asa_running.txt  cisco_ios_running.txt  cisco_nxos_running.txt  fortinet_fortigate_running.txt  gcp_project.json  juniper_junos_running.txt  linux_server.txt  lldp_neighbors.txt  palo_alto_panos_running.txt  vmware_esxi.txt  windows_server.txt
helm/safecadence-netrisk/: Chart.yaml  README.md  values.yaml
mobile/: README.md
scripts/: generate_sbom.py
sdk/go/: README.md  client.go  client_test.go  go.mod  types.go
sdk/js/: README.md  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/safecadence_sdk/: __init__.py  client.py  exceptions.py
sdk/python/tests/: test_sdk_client.py
src/safecadence/: __init__.py  adapter_harness.py  adapter_manifest.py  bulk.py  cli.py  cli_policy.py  cloud_sync.py  collect.py  daemon.py  demo.py  digest.py  evidence_pack.py  io_csv.py  license.py  msp_agent.py  multitenant.py  onboarding.py  settings.py  sso.py  storage_pg.py  totp.py
terraform/provider-safecadence/: README.md  data_source_safecadence_inventory.go  go.mod  main.go  provider.go  resource_safecadence_org.go  resource_safecadence_report_template.go
tests/: test_asset_dedup.py  test_audit_engine.py  test_cloud_sources.py  test_cloud_sync.py  test_compliance.py  test_compliance_api.py  test_dashboard.py  test_discovery.py  test_e2e_v9_35_1.py  test_endpoint_sources.py  test_enrichment.py  test_link_audit.py  test_multi_vendor.py  test_parser.py  test_reports.py  test_safe_score.py  test_safe_score_v9_26.py  test_score_history.py  test_settings.py  test_snmp_harvest.py  test_splunk_hec.py  test_topology.py  test_v10_4_theme_a.py  test_v10_4_theme_b.py  test_v10_5.py  test_v10_6.py  test_v10_7.py  test_v10_8.py  test_v10_9.py  test_v11_0.py  test_v11_1.py  test_v11_2.py  test_v11_3.py  test_v11_3_1_local_llm.py  test_v11_4_0_llm_config.py  test_v11_5_0_free_cloud.py  test_v11_6_0_more_providers.py  test_v12_0_mcp_and_polish.py  test_v12_0a6_ui_pages.py  test_v12_1_ha.py  (+22 more)
tests/activity/: test_v9_47_activity_store.py  test_v9_47_middleware.py  test_v9_54_prune.py  test_v9_57_audit_endpoint.py
tests/capabilities/: test_v9_48_capabilities.py  test_v9_48_cli.py  test_v9_49_1_gates.py  test_v9_50_1_cleanup.py  test_v9_50_explicit_grant.py  test_v9_52_1_caps_matrix.py  test_v9_53.py  test_v9_54_cross_tenant.py  test_v9_54_sso_caps.py  (+1 more)
webui/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+593 files in other folders)
